--- a/_config.yaml
+++ b/_config.yaml
@@ -1,32 +1,21 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your entire site, values
-# which you are expected to set up once and rarely need to edit after that.
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# `jekyll serve -l -H localhost`. If you change this file, please restart the 
-# server process.
-
 # Basic Site Settings
 locale: "en-US"
 title: "Mohd Amaan / Data Scientist"
 title_separator: "-"
 name: &name "Mohd Amaan"
-description              : &description "personal description"
-url: "amaanai.github.io"
+description: &description "Highly motivated and dynamic Data Scientist with over 2.5 years of experience in software development, showcasing mastery in diverse programming languages and specializing in strategic machine learning models."
+url: "" # Replace with your custom URL if available
 baseurl: ""
 
-# Site Author - The following control what appear as part of the author content on the side bar.
-#               If a field is blank the icon and link will not appear, otherwise it will be shown.
-#               Additional customization can be done by editing /_includes/author-profile.html
+# Site Author
 author:
   avatar: "profile.png"
   name: "Mohd Amaan"
+  bio: "I am a highly motivated and dynamic Data Scientist with over 2.5 years of experience in software development, showcasing mastery in diverse programming languages such as Python, Java, and more. I specialize in crafting and deploying strategic machine learning models, demonstrating expertise in data cleaning, feature engineering, and model evaluation."
   location: "Lucknow, Uttar Pradesh, India"
   employer: "Clavis Technologies Pvt. Ltd."
   email: "mohdamaan00007777@gmail.com"
 
-  orcid            : "http://orcid.org/yourorcidurl"
-  instagram        : # Username
 # Site Settings
 breadcrumbs: false
 words_per_minute: 160
