--- a/_config.yaml
+++ b/_config.yaml
@@ -13,6 +13,7 @@ author:
   location: "Lucknow, Uttar Pradesh, India"
   employer: "Clavis Technologies Pvt. Ltd."
   email: "mohdamaan00007777@gmail.com"
+  github: "https://github.com/amaanai"
 
 # Site Settings
 breadcrumbs: false
